fix sm spacing

--- a/src/bin/res/css/windows/startmenu-content.css
+++ b/src/bin/res/css/windows/startmenu-content.css
@@ -46,6 +46,7 @@
 .smc-item img {
 	width: 32px;
 	height: 32px;
+	margin-right: 9px;
 }
 
 .smc-item-outer {
